:construction: remove unused import

--- a/silver/etl.ipynb
+++ b/silver/etl.ipynb
@@ -18,13 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6b554973",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import seaborn as sbn"
+    "import pandas as pd"
    ]
   },
   {
