--- a/silver/vizualization.ipynb
+++ b/silver/vizualization.ipynb
@@ -5,16 +5,235 @@
    "id": "c652c146",
    "metadata": {},
    "source": [
-    "# Data Visualization"
+    "# Data Visualization\n",
+    "\n",
+    "Este notebook apresenta uma análise visual do fenômeno de insucesso acadêmico a partir de um conjunto de dados previamente transformado na camada Silver do pipeline. Os dados foram originalmente extraídos de um relatório institucional e ingeridos na forma de arquivo Excel com abas por semestre, armazenado na camada Bronze. O objetivo é sintetizar evidências empíricas, em nível de disciplina, semestre e departamento, acerca da distribuição do insucesso, de sua evolução temporal e de suas variações relativas ao porte das turmas. Para isso, emprega-se uma abordagem exploratória e explicativa que combina medidas absolutas (contagens) e relativas (taxas normalizadas por número de discentes), bem como séries temporais por semestre para identificação de tendências.\n",
+    "\n",
+    "O conjunto de dados utilizado é um arquivo CSV, `lista-insucesso-processed.csv`, com 610 registros e 14 variáveis. Entre as variáveis de maior relevância analítica destacam-se: Código e Nome da disciplina (identificadores textuais, sendo o prefixo de Código utilizado para derivar o Departamento), Discentes e Turmas (indicadores de porte e oferta), Cancelamentos e Trancamentos (eventos administrativos), o detalhamento das reprovações por critério (Média, Nota, Falta, combinações) e o Total Insucesso (medida agregada reportada pela fonte). O marcador temporal Semestre é representado como texto para preservar o formato do período (por exemplo, 2023.2, 2024.1) e permitir seu uso como eixo nas séries temporais.\n",
+    "\n",
+    "Do ponto de vista metodológico, a análise organiza-se em três frentes complementares. Em primeiro lugar, realizam-se agregações por disciplina e por semestre com o intuito de construir rankings e identificar concentrações de insucesso. Em segundo lugar, avaliam-se trajetórias ao longo do tempo mediante gráficos de linha e ajuste de tendências, o que permite reconhecer movimentos de aumento, redução ou estabilidade. Em terceiro lugar, produzem-se comparativos entre departamentos, com indicadores de eficiência (alunos por turma) e de qualidade (taxa de insucesso em percentuais), de modo a contextualizar resultados em função de diferenças de escala e oferta.\n",
+    "\n",
+    "O desenho visual prioriza representações que maximizam legibilidade e comparabilidade: barras horizontais para ordenação e leitura de rankings, séries temporais com marcações e rotulações para facilitar a interpretação de variações, e anotações diretas para explicitar valores relevantes. A preparação prévia dos dados, realizada no notebook de ETL, assegura padronização de tipos, enriquecimento com atributos derivados e consolidação entre semestres, o que contribui para a consistência das inferências. Embora o Total Insucesso seja consumido tal como fornecido pela fonte, reconhece-se que análises explicativas sobre causas demandariam variáveis adicionais (por exemplo, perfil discente, pré-requisitos ou carga horária). Por fim, as rotinas aqui apresentadas foram estruturadas para reprodutibilidade, com leitura padronizada do CSV e parametrizações que viabilizam a atualização do estudo à medida que novos semestres forem incorporados ao pipeline."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "712b291c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formato: (610, 14)\n",
+      "Colunas: ['Código', 'Nome', 'Turmas', 'Discentes', 'Cancelamentos', 'Reprovações Média', 'Reprovações Nota', 'Reprovações Falta', 'Reprovações Média e Falta', 'Reprovações Nota e Falta', 'Trancamentos', 'Total Insucesso', 'Semestre', 'Departamento']\n",
+      "Tipos:\n",
+      " Código                        object\n",
+      "Nome                          object\n",
+      "Turmas                         int64\n",
+      "Discentes                      int64\n",
+      "Cancelamentos                  int64\n",
+      "Reprovações Média              int64\n",
+      "Reprovações Nota               int64\n",
+      "Reprovações Falta              int64\n",
+      "Reprovações Média e Falta      int64\n",
+      "Reprovações Nota e Falta       int64\n",
+      "Trancamentos                   int64\n",
+      "Total Insucesso                int64\n",
+      "Semestre                     float64\n",
+      "Departamento                  object\n",
+      "dtype: object\n",
+      "\n",
+      "Semestres: [np.float64(2023.2), np.float64(2024.1), np.float64(2024.2), np.float64(2025.1)]\n",
+      "\n",
+      "Resumo numérico:\n",
+      "                            count       mean        std  min  25%  50%    75%  \\\n",
+      "Turmas                     610.0   2.093443   2.508335  1.0  1.0  1.0   2.00   \n",
+      "Discentes                  610.0  45.254098  70.704171  1.0  1.0  3.0  77.75   \n",
+      "Cancelamentos              610.0   1.539344   2.782055  0.0  0.0  0.0   2.00   \n",
+      "Trancamentos               610.0   2.701639   6.073401  0.0  0.0  0.0   2.00   \n",
+      "Reprovações Média          610.0   4.867213  12.776354  0.0  0.0  0.0   2.00   \n",
+      "Reprovações Nota           610.0   0.000000   0.000000  0.0  0.0  0.0   0.00   \n",
+      "Reprovações Falta          610.0   1.452459   3.749356  0.0  0.0  0.0   1.00   \n",
+      "Reprovações Média e Falta  610.0   0.000000   0.000000  0.0  0.0  0.0   0.00   \n",
+      "Reprovações Nota e Falta   610.0   0.000000   0.000000  0.0  0.0  0.0   0.00   \n",
+      "Total Insucesso            610.0  10.560656  21.967294  0.0  1.0  1.0  10.00   \n",
+      "\n",
+      "                             max  \n",
+      "Turmas                      21.0  \n",
+      "Discentes                  373.0  \n",
+      "Cancelamentos               14.0  \n",
+      "Trancamentos                42.0  \n",
+      "Reprovações Média          103.0  \n",
+      "Reprovações Nota             0.0  \n",
+      "Reprovações Falta           36.0  \n",
+      "Reprovações Média e Falta    0.0  \n",
+      "Reprovações Nota e Falta     0.0  \n",
+      "Total Insucesso            149.0  \n",
+      "\n",
+      "Valores ausentes por coluna:\n",
+      " Series([], dtype: int64)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Código</th>\n",
+       "      <th>Nome</th>\n",
+       "      <th>Turmas</th>\n",
+       "      <th>Discentes</th>\n",
+       "      <th>Cancelamentos</th>\n",
+       "      <th>Reprovações Média</th>\n",
+       "      <th>Reprovações Nota</th>\n",
+       "      <th>Reprovações Falta</th>\n",
+       "      <th>Reprovações Média e Falta</th>\n",
+       "      <th>Reprovações Nota e Falta</th>\n",
+       "      <th>Trancamentos</th>\n",
+       "      <th>Total Insucesso</th>\n",
+       "      <th>Semestre</th>\n",
+       "      <th>Departamento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADM0014</td>\n",
+       "      <td>ADMINISTRAÇÃO PÚBLICA E GESTÃO SOCIAL</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023.2</td>\n",
+       "      <td>ADM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FGA0038</td>\n",
+       "      <td>AERODINÂMICA DE SISTEMAS AEROESPACIAIS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023.2</td>\n",
+       "      <td>FGA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FUP0545</td>\n",
+       "      <td>AGRICULTURA E MEIO AMBIENTE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2023.2</td>\n",
+       "      <td>FUP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Código                                    Nome  Turmas  Discentes  \\\n",
+       "0  ADM0014   ADMINISTRAÇÃO PÚBLICA E GESTÃO SOCIAL       1          1   \n",
+       "1  FGA0038  AERODINÂMICA DE SISTEMAS AEROESPACIAIS       1          1   \n",
+       "2  FUP0545             AGRICULTURA E MEIO AMBIENTE       1          1   \n",
+       "\n",
+       "   Cancelamentos  Reprovações Média  Reprovações Nota  Reprovações Falta  \\\n",
+       "0              0                  0                 0                  0   \n",
+       "1              0                  0                 0                  0   \n",
+       "2              0                  1                 0                  0   \n",
+       "\n",
+       "   Reprovações Média e Falta  Reprovações Nota e Falta  Trancamentos  \\\n",
+       "0                          0                         0             0   \n",
+       "1                          0                         0             1   \n",
+       "2                          0                         0             0   \n",
+       "\n",
+       "   Total Insucesso  Semestre Departamento  \n",
+       "0                0    2023.2          ADM  \n",
+       "1                1    2023.2          FGA  \n",
+       "2                1    2023.2          FUP  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Comentário: inspeção inicial do CSV consolidado (forma, colunas, tipos, semestres), estatísticas básicas e checagem de valores ausentes para validar a integridade antes das análises.\n",
+    "# Visão geral programática dos dados (executar antes das análises)\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Leitura independente para garantir reprodutibilidade desta seção\n",
+    "_df = pd.read_csv(\"lista-insucesso-processed.csv\", sep=\";\", encoding=\"utf-8\")\n",
+    "\n",
+    "print(\"Formato:\", _df.shape)\n",
+    "print(\"Colunas:\", list(_df.columns))\n",
+    "print(\"Tipos:\\n\", _df.dtypes)\n",
+    "print(\"\\nSemestres:\", sorted(_df['Semestre'].unique()))\n",
+    "\n",
+    "# Estatísticas descritivas selecionadas\n",
+    "cols_numericas = [\n",
+    "    'Turmas','Discentes','Cancelamentos','Trancamentos',\n",
+    "    'Reprovações Média','Reprovações Nota','Reprovações Falta',\n",
+    "    'Reprovações Média e Falta','Reprovações Nota e Falta','Total Insucesso'\n",
+    "]\n",
+    "print(\"\\nResumo numérico:\\n\", _df[cols_numericas].describe().T)\n",
+    "\n",
+    "# Verificações simples\n",
+    "missing = _df.isna().sum()\n",
+    "print(\"\\nValores ausentes por coluna:\\n\", missing[missing>0])\n",
+    "\n",
+    "# Amostra das primeiras linhas\n",
+    "_df.head(3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e89cd446",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Comentário: importações principais — pandas (dados tabulares), seaborn/matplotlib (visualização), numpy (cálculos numéricos e regressão para linhas de tendência).\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "34e8ff95",
    "metadata": {},
    "outputs": [
@@ -327,6 +546,7 @@
     }
    ],
    "source": [
+    "# Comentário: carrega o dataset consolidado do ETL (CSV com separador ';') e exibe uma amostra para confirmar o carregamento.\n",
     "dataframe = pd.read_csv(\"lista-insucesso-processed.csv\", sep=\";\", encoding=\"utf-8\")\n",
     "dataframe"
    ]
@@ -341,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "f5e1ddcb",
    "metadata": {},
    "outputs": [
@@ -368,6 +588,7 @@
     }
    ],
    "source": [
+    "# Comentário: seleciona as 10 disciplinas com maior Total de Insucesso e plota barras horizontais para comunicar o ranking de forma legível.\n",
     "top_failures = dataframe.nlargest(10, \"Total Insucesso\")[[\"Nome\", \"Total Insucesso\"]]\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
@@ -394,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "d755d3a6",
    "metadata": {},
    "outputs": [
@@ -410,6 +631,7 @@
     }
    ],
    "source": [
+    "# Comentário: agrega o Total de Insucesso por semestre, plota uma série temporal e adiciona uma linha de tendência por regressão linear (numpy.polyfit) para indicar direção geral.\n",
     "semesterly_failures = dataframe.groupby(\"Semestre\")[\"Total Insucesso\"].sum().reset_index()\n",
     "\n",
     "plt.subplots(figsize=(12, 6))\n",
@@ -442,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "f3b01488",
    "metadata": {},
    "outputs": [
@@ -487,6 +709,7 @@
     }
    ],
    "source": [
+    "# Comentário: escolhe automaticamente a disciplina com maior Total de Insucesso e cria duas séries: (1) total absoluto por semestre e (2) taxa (%) normalizada por Discentes. Também calcula tendências lineares se houver mais de um ponto temporal.\n",
     "disciplina_maior_insucesso = dataframe.loc[dataframe['Total Insucesso'].idxmax()]\n",
     "nome_disciplina = disciplina_maior_insucesso['Nome']\n",
     "codigo_disciplina = disciplina_maior_insucesso['Código']\n",
@@ -565,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "af9dee24",
    "metadata": {},
    "outputs": [
@@ -585,13 +808,14 @@
     }
    ],
    "source": [
+    "# Comentário: soma componentes de reprovação para contextualizar o Total de Insucesso e entender contribuições por tipo (nota, falta e combinações).\n",
     "total_reprovações = dataframe[[\"Reprovações Nota\", \"Reprovações Falta\", \"Reprovações Média e Falta\", \"Reprovações Nota e Falta\"]].sum()\n",
     "total_reprovações"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "3dc20af7",
    "metadata": {},
    "outputs": [
@@ -765,6 +989,7 @@
     }
    ],
    "source": [
+    "# Comentário: para cada semestre, ranquear as 10 disciplinas com mais alunos matriculados (escala/oferta), plotar barras horizontais com anotações e imprimir um sumário tabular e estatísticas gerais.\n",
     "semestres = sorted(dataframe['Semestre'].unique())\n",
     "\n",
     "print(f\"Semestres encontrados: {semestres}\")\n",
@@ -820,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "61c4702e",
    "metadata": {},
    "outputs": [
@@ -896,6 +1121,7 @@
     }
    ],
    "source": [
+    "# Comentário: agregações por Departamento para comparar escala (alunos), oferta (turmas), quantidade de disciplinas e qualidade (taxa de insucesso). Visualização em barras horizontais e impressão de sumários.\n",
     "dept_stats = dataframe.groupby('Departamento').agg({\n",
     "    'Discentes': 'sum',\n",
     "    'Turmas': 'sum',\n",
