edit docker-compose and etl.ipynb

--- a/silver/etl.ipynb
+++ b/silver/etl.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 107,
    "id": "cff98959",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
          "type": "integer"
         }
        ],
-       "ref": "7f575452-204a-451c-be9c-6d6a815e79d9",
+       "ref": "39558fb3-c983-4fa0-b2fe-b2d4568d5008",
        "rows": [
         [
          "0",
@@ -359,7 +359,7 @@
        "2                1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 108,
    "id": "6b554973",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 109,
    "id": "c08665b7",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
    "id": "2af43a98",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 111,
    "id": "fde1f323",
    "metadata": {},
    "outputs": [],
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "id": "f61e0b3b",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
          "type": "integer"
         }
        ],
-       "ref": "55643d55-a2d7-4cba-9609-2518ba54d57a",
+       "ref": "64d8e4de-f084-44fc-a1f5-9bd7e74f7909",
        "rows": [
         [
          "149",
@@ -878,7 +878,7 @@
        "153           547             2205  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 113,
    "id": "0608d0cf",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 114,
    "id": "ee2b6443",
    "metadata": {},
    "outputs": [],
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 115,
    "id": "674b6b75",
    "metadata": {},
    "outputs": [],
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 116,
    "id": "25cce193",
    "metadata": {},
    "outputs": [],
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 117,
    "id": "43284523",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 118,
    "id": "7126a595",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 119,
    "id": "14e3322b",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 120,
    "id": "5c218ee4",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1149,7 @@
          "type": "string"
         }
        ],
-       "ref": "9e0ddbaa-2f14-4ca2-b1b3-23ff09fb88b3",
+       "ref": "f434b21f-5276-4ada-937b-bed5e480ade5",
        "rows": [
         [
          "148",
@@ -1397,7 +1397,7 @@
        "152             1               11   2023.2          DSC  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 121,
    "id": "2afb257c",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 122,
    "id": "ebd9b356",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
          "type": "integer"
         }
        ],
-       "ref": "5020af1c-a969-47f7-981b-c242b1c48d00",
+       "ref": "63afa1c7-f0b3-425d-8ba1-e7a49f6eae1e",
        "rows": [
         [
          "141",
@@ -1750,7 +1750,7 @@
        "145             0              619  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 123,
    "id": "43dad1f5",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 124,
    "id": "e4150901",
    "metadata": {},
    "outputs": [],
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 125,
    "id": "c621f386",
    "metadata": {},
    "outputs": [],
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 126,
    "id": "e322c00e",
    "metadata": {},
    "outputs": [],
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 127,
    "id": "a816d4f3",
    "metadata": {},
    "outputs": [],
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 128,
    "id": "e22b7533",
    "metadata": {},
    "outputs": [],
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 129,
    "id": "879c5ccd",
    "metadata": {},
    "outputs": [
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 130,
    "id": "306140cf",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2021,7 @@
          "type": "string"
         }
        ],
-       "ref": "369cfdc1-c6ed-4e23-8334-917746f2a212",
+       "ref": "6a8a9036-d479-4142-86d3-9e9ed334d723",
        "rows": [
         [
          "140",
@@ -2269,7 +2269,7 @@
        "144             0               21   2024.1          DSC  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 131,
    "id": "7e5d9ea0",
    "metadata": {},
    "outputs": [],
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 132,
    "id": "9874ee03",
    "metadata": {},
    "outputs": [
@@ -2385,7 +2385,7 @@
          "type": "integer"
         }
        ],
-       "ref": "404f0248-4fe6-4e79-a520-f0477e76e5a2",
+       "ref": "bce0af4d-21b1-43f4-bfa6-723b534d4c88",
        "rows": [
         [
          "159",
@@ -2622,7 +2622,7 @@
        "163           523             1884  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 133,
    "id": "93190fc6",
    "metadata": {},
    "outputs": [
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 134,
    "id": "8347992a",
    "metadata": {},
    "outputs": [],
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 135,
    "id": "f4bca1b2",
    "metadata": {},
    "outputs": [],
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 136,
    "id": "fdb2a725",
    "metadata": {},
    "outputs": [],
@@ -2734,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 137,
    "id": "b2fe4702",
    "metadata": {},
    "outputs": [],
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 138,
    "id": "318c8041",
    "metadata": {},
    "outputs": [],
@@ -2771,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 139,
    "id": "a9e9c255",
    "metadata": {},
    "outputs": [
@@ -2809,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 140,
    "id": "c423f31f",
    "metadata": {},
    "outputs": [
@@ -2893,7 +2893,7 @@
          "type": "string"
         }
        ],
-       "ref": "beeea96c-c53e-404b-a22f-3a3a6ceaad9f",
+       "ref": "d2ae1ff6-5499-47be-84c7-6ca1688ddd23",
        "rows": [
         [
          "158",
@@ -3141,7 +3141,7 @@
        "162             3               18   2024.2          DSC  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3160,7 +3160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 141,
    "id": "2f61c486",
    "metadata": {},
    "outputs": [],
@@ -3178,7 +3178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 142,
    "id": "42f8d2a0",
    "metadata": {},
    "outputs": [
@@ -3257,7 +3257,7 @@
          "type": "integer"
         }
        ],
-       "ref": "74d6678c-9864-4756-ba61-76a0da25c1ad",
+       "ref": "80a20349-7376-45ae-9061-6dc873f8db3f",
        "rows": [
         [
          "145",
@@ -3494,7 +3494,7 @@
        "149           578             1734  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3506,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 143,
    "id": "449e00c2",
    "metadata": {},
    "outputs": [
@@ -3551,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 144,
    "id": "0855d547",
    "metadata": {},
    "outputs": [],
@@ -3569,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 145,
    "id": "6d347c26",
    "metadata": {},
    "outputs": [],
@@ -3587,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 146,
    "id": "69324c15",
    "metadata": {},
    "outputs": [],
@@ -3606,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 147,
    "id": "5d683d78",
    "metadata": {},
    "outputs": [],
@@ -3625,7 +3625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 148,
    "id": "5f7aef69",
    "metadata": {},
    "outputs": [],
@@ -3643,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 149,
    "id": "6fb57df2",
    "metadata": {},
    "outputs": [
@@ -3681,7 +3681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 150,
    "id": "bafe78de",
    "metadata": {},
    "outputs": [
@@ -3765,7 +3765,7 @@
          "type": "string"
         }
        ],
-       "ref": "1736671d-3a5f-4322-998b-f429fd68421e",
+       "ref": "303b9e7d-fc04-401a-b0ba-56290d4b83f9",
        "rows": [
         [
          "144",
@@ -4013,7 +4013,7 @@
        "148             5               24   2025.1          DSC  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4032,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 151,
    "id": "abd05b9d",
    "metadata": {},
    "outputs": [],
@@ -4044,7 +4044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 152,
    "id": "1de319d0",
    "metadata": {},
    "outputs": [],
@@ -4062,7 +4062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 153,
    "id": "c856431c",
    "metadata": {},
    "outputs": [
@@ -4203,7 +4203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 154,
    "id": "ce2c7cbe",
    "metadata": {},
    "outputs": [
@@ -4242,7 +4242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 155,
    "id": "9b396292",
    "metadata": {},
    "outputs": [
@@ -4331,7 +4331,7 @@
          "type": "string"
         }
        ],
-       "ref": "270561b0-091f-46d1-ba64-bec0b7a11962",
+       "ref": "2937e62d-2a14-43c8-b6ca-eac3b8053df6",
        "rows": [
         [
          "912",
@@ -4590,13 +4590,138 @@
        "916                4   2025.1          DSC  Automotiva  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "finalDataframe.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e561f954",
+   "metadata": {},
+   "source": [
+    "### Transform semester column to the format year-semester"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "3a283e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finalDataframe['Semestre'] = finalDataframe['Semestre'].str.replace('\\\\.','-', regex=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6adaea16",
+   "metadata": {},
+   "source": [
+    "## Populate Database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cf5060e",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "1213a5e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "from psycopg2 import sql\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7de37c6c",
+   "metadata": {},
+   "source": [
+    "### Connect Postgres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "0f805956",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DB_HOST = os.getenv(\"DATABASE_HOST\", \"localhost\")\n",
+    "DB_PORT = os.getenv(\"DATABASE_PORT\", \"5432\")\n",
+    "DB_USER = os.getenv(\"DATABASE_USER\", \"postgres\")\n",
+    "DB_PASSWORD = os.getenv(\"DATABASE_PASSWORD\", \"postgres123\")\n",
+    "\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    host=DB_HOST,\n",
+    "    port=DB_PORT,\n",
+    "    user=DB_USER,\n",
+    "    password=DB_PASSWORD\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e91b0524",
+   "metadata": {},
+   "source": [
+    "### Populate Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "0a8a3555",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = conn.cursor()\n",
+    "\n",
+    "df = finalDataframe\n",
+    "\n",
+    "for _, row in df.iterrows():\n",
+    "    cursor.execute(\"\"\"\n",
+    "        INSERT INTO disciplinas (\n",
+    "            codigo, nome, turmas, discentes, cancelamentos,\n",
+    "            reprovacoesMedia, reprovacoesNota, reprovacoesFalta,\n",
+    "            reprovacoesMediaFalta, reprovacoesNotaFalta, trancamentos,\n",
+    "            insucessos, semestre, departamento, curso\n",
+    "        ) VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\n",
+    "    \"\"\", (\n",
+    "        row['Código'],\n",
+    "        row['Nome'],\n",
+    "        row['Turmas'],\n",
+    "        row['Discentes'],\n",
+    "        row['Cancelamentos'],\n",
+    "        row['Reprovações Média'],\n",
+    "        row['Reprovações Nota'],\n",
+    "        row['Reprovações Falta'],\n",
+    "        row['Reprovações Média e Falta'],\n",
+    "        row['Reprovações Nota e Falta'],\n",
+    "        row['Trancamentos'],\n",
+    "        row['Total Insucesso'],\n",
+    "        row['Semestre'],\n",
+    "        row['Departamento'],\n",
+    "        row['Curso']\n",
+    "    ))\n",
+    "\n",
+    "conn.commit()\n",
+    "cursor.close()\n",
+    "conn.close()"
    ]
   },
   {
@@ -4609,7 +4734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 160,
    "id": "0823c948",
    "metadata": {},
    "outputs": [],
@@ -4620,7 +4745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv (3.13.3)",
    "language": "python",
    "name": "python3"
   },
@@ -4634,7 +4759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
