--- a/Transformer/raw-to-silver/etl-raw_to_silver.ipynb
+++ b/Transformer/raw-to-silver/etl-raw_to_silver.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "cff98959",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
          "type": "integer"
         }
        ],
-       "ref": "6b8698ae-f7d9-47e9-b95f-6b71b57656b3",
+       "ref": "6caea618-cbc0-47ad-a495-86cd5455c964",
        "rows": [
         [
          "0",
@@ -359,7 +359,7 @@
        "2                1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
     "import pandas as pd\n",
     "\n",
     "# Carrega todas as abas\n",
-    "_all = pd.read_excel(\"../Data-Layer/raw/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
+    "_all = pd.read_excel(\"../../Data-Layer/raw/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
     "\n",
     "# Lista de abas e formas\n",
     "print(\"Abas:\", list(_all.keys()))\n",
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "6b554973",
    "metadata": {},
    "outputs": [],
@@ -419,18 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "c08665b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframes_all_sheets = pd.read_excel(\"../bronze/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
-    "dataframes_all_sheets_automotiva = pd.read_excel(\"../bronze/Relatorio-Lista-Insucesso-Automotiva.xlsx\", sheet_name=None)"
+    "dataframes_all_sheets = pd.read_excel(\"../../Data-Layer/raw/Relatorio-Lista-Insucesso.xlsx\", sheet_name=None)\n",
+    "dataframes_all_sheets_automotiva = pd.read_excel(\"../../Data-Layer/raw/Relatorio-Lista-Insucesso-Automotiva.xlsx\", sheet_name=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "2af43a98",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fde1f323",
    "metadata": {},
    "outputs": [],
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "f61e0b3b",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
          "type": "integer"
         }
        ],
-       "ref": "3782a0f8-9d31-468a-b205-316842b60ee9",
+       "ref": "453b153c-ee46-443a-b2d8-e4f5f1cd61a1",
        "rows": [
         [
          "149",
@@ -878,7 +878,7 @@
        "153           547             2205  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "0608d0cf",
    "metadata": {},
    "outputs": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "ee2b6443",
    "metadata": {},
    "outputs": [],
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "674b6b75",
    "metadata": {},
    "outputs": [],
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "25cce193",
    "metadata": {},
    "outputs": [],
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "43284523",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "7126a595",
    "metadata": {},
    "outputs": [],
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "14e3322b",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "5c218ee4",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1149,7 @@
          "type": "string"
         }
        ],
-       "ref": "84419e7b-1655-4142-8ccd-8f1816d70a57",
+       "ref": "6d6e90ff-014e-43aa-8e2d-fe144b74de5b",
        "rows": [
         [
          "148",
@@ -1397,7 +1397,7 @@
        "152             1               11   2023.2          DSC  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "2afb257c",
    "metadata": {},
    "outputs": [],
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "ebd9b356",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
          "type": "integer"
         }
        ],
-       "ref": "43ca14c7-5e6b-499b-86d8-05021363f285",
+       "ref": "cfd515c7-9bd3-4bca-9fe7-d8a75beb1588",
        "rows": [
         [
          "141",
@@ -1750,7 +1750,7 @@
        "145             0              619  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "43dad1f5",
    "metadata": {},
    "outputs": [
@@ -1807,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "e4150901",
    "metadata": {},
    "outputs": [],
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "c621f386",
    "metadata": {},
    "outputs": [],
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "e322c00e",
    "metadata": {},
    "outputs": [],
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "a816d4f3",
    "metadata": {},
    "outputs": [],
@@ -1881,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "e22b7533",
    "metadata": {},
    "outputs": [],
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "879c5ccd",
    "metadata": {},
    "outputs": [
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "306140cf",
    "metadata": {},
    "outputs": [
@@ -2021,7 +2021,7 @@
          "type": "string"
         }
        ],
-       "ref": "2381a446-1a66-4bdb-894b-94e3edee1637",
+       "ref": "bf4b03b3-ee30-433d-bb6c-c3020dadf5d5",
        "rows": [
         [
          "140",
@@ -2269,7 +2269,7 @@
        "144             0               21   2024.1          DSC  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "7e5d9ea0",
    "metadata": {},
    "outputs": [],
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "9874ee03",
    "metadata": {},
    "outputs": [
@@ -2385,7 +2385,7 @@
          "type": "integer"
         }
        ],
-       "ref": "8191e61a-b95a-43d7-9268-b4ceda41e487",
+       "ref": "3022a288-eac0-43c4-b65b-572b347cfb53",
        "rows": [
         [
          "159",
@@ -2622,7 +2622,7 @@
        "163           523             1884  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "93190fc6",
    "metadata": {},
    "outputs": [
@@ -2679,7 +2679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "8347992a",
    "metadata": {},
    "outputs": [],
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "id": "f4bca1b2",
    "metadata": {},
    "outputs": [],
@@ -2715,7 +2715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "fdb2a725",
    "metadata": {},
    "outputs": [],
@@ -2734,7 +2734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "b2fe4702",
    "metadata": {},
    "outputs": [],
@@ -2753,7 +2753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "id": "318c8041",
    "metadata": {},
    "outputs": [],
@@ -2771,7 +2771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "a9e9c255",
    "metadata": {},
    "outputs": [
@@ -2809,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "id": "c423f31f",
    "metadata": {},
    "outputs": [
@@ -2893,7 +2893,7 @@
          "type": "string"
         }
        ],
-       "ref": "bdaff200-c90f-4e83-b3e9-d78d7bf9b132",
+       "ref": "8cb4d3e7-5956-48ff-a8f4-554b9978a97b",
        "rows": [
         [
          "158",
@@ -3141,7 +3141,7 @@
        "162             3               18   2024.2          DSC  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3160,7 +3160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "2f61c486",
    "metadata": {},
    "outputs": [],
@@ -3178,7 +3178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "42f8d2a0",
    "metadata": {},
    "outputs": [
@@ -3257,7 +3257,7 @@
          "type": "integer"
         }
        ],
-       "ref": "f893bcf7-6225-4ac6-a67e-566ab9066b33",
+       "ref": "cad5c164-666f-47dc-9a5e-ab6c80adefec",
        "rows": [
         [
          "145",
@@ -3494,7 +3494,7 @@
        "149           578             1734  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3506,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "449e00c2",
    "metadata": {},
    "outputs": [
@@ -3551,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "0855d547",
    "metadata": {},
    "outputs": [],
@@ -3569,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "6d347c26",
    "metadata": {},
    "outputs": [],
@@ -3587,7 +3587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "69324c15",
    "metadata": {},
    "outputs": [],
@@ -3606,7 +3606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "5d683d78",
    "metadata": {},
    "outputs": [],
@@ -3625,7 +3625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "5f7aef69",
    "metadata": {},
    "outputs": [],
@@ -3643,7 +3643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "6fb57df2",
    "metadata": {},
    "outputs": [
@@ -3681,7 +3681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "bafe78de",
    "metadata": {},
    "outputs": [
@@ -3765,7 +3765,7 @@
          "type": "string"
         }
        ],
-       "ref": "9dc86e14-a489-4775-acbc-ac6f806880f6",
+       "ref": "ee22ac7e-b31f-4dae-b17b-54aa29495598",
        "rows": [
         [
          "144",
@@ -4013,7 +4013,7 @@
        "148             5               24   2025.1          DSC  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4032,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "abd05b9d",
    "metadata": {},
    "outputs": [],
@@ -4044,7 +4044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "1de319d0",
    "metadata": {},
    "outputs": [],
@@ -4062,7 +4062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "c856431c",
    "metadata": {},
    "outputs": [
@@ -4203,7 +4203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "ce2c7cbe",
    "metadata": {},
    "outputs": [
@@ -4242,7 +4242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "9b396292",
    "metadata": {},
    "outputs": [
@@ -4331,7 +4331,7 @@
          "type": "string"
         }
        ],
-       "ref": "249f2835-7250-4a26-a4fa-8699c2265dac",
+       "ref": "75c34de3-aa6b-4d88-8155-e4da2711c879",
        "rows": [
         [
          "912",
@@ -4590,7 +4590,7 @@
        "916                4   2025.1          DSC  Automotiva  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4609,7 +4609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "3a283e41",
    "metadata": {},
    "outputs": [],
@@ -4635,7 +4635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "id": "1213a5e0",
    "metadata": {},
    "outputs": [],
@@ -4655,7 +4655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "0f805956",
    "metadata": {},
    "outputs": [],
@@ -4684,7 +4684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "id": "0a8a3555",
    "metadata": {},
    "outputs": [],
@@ -4734,7 +4734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "0823c948",
    "metadata": {},
    "outputs": [],
